tests/ui/asm/bad-arch.stderr
error[E0472]: inline assembly is unsupported on this target
  --> $DIR/bad-arch.rs:20:9
   |
LL |         asm!("");
   |         ^^^^^^^^

error[E0472]: inline assembly is unsupported on this target
  --> $DIR/bad-arch.rs:25:1
   |
LL | global_asm!("");
   | ^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0472`.
